--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
         <h2>Panduan Komunitas Game Weelife</h2>
         <p>Bergabunglah dengan komunitas kami untuk menjelajahi dunia Weelife bersama. Kami berbagi tips, trik, dan momen seru dalam game ini!</p>
         <div style="margin-top: 10px;">
-          <a href="https://weelife.com" target="_blank" class="btn-simple">Kunjungi Weelife</a>
+          <a href="https://weelifeapp.com" target="_blank" class="btn-simple">Kunjungi Weelife</a>
         </div>
       </div>
       <div style="min-width:160px;text-align:right">
