--- a/index.html
+++ b/index.html
@@ -399,24 +399,24 @@
 
     // initial demo images (weelife placeholders)
     let images = [
-      {id:1, src:'https://picsum.photos/seed/weelife1/1200/800', title:'Menjelajahi Kota', tag:'event', desc:'Petualangan di kota virtual Weelife.'},
-      {id:2, src:'https://picsum.photos/seed/weelife2/1200/800', title:'Santai di Pantai', tag:'meet', desc:'Kumpul santai komunitas di pantai.'},
-      {id:3, src:'https://picsum.photos/seed/weelife3/1200/1600', title:'Desain Rumah', tag:'art', desc:'Karya desain rumah anggota.'},
-      {id:4, src:'https://picsum.photos/seed/weelife4/1200/800', title:'Festival Komunitas', tag:'event', desc:'Merayakan festival bersama di Weelife.'},
-      {id:5, src:'https://picsum.photos/seed/weelife5/1200/800', title:'Malam Pesta', tag:'meet', desc:'Pesta malam bersama di klub.'},
-      {id:6, src:'https://picsum.photos/seed/weelife6/1200/800', title:'Taman Bunga', tag:'art', desc:'Hasil foto taman bunga virtual.'},
-      {id:7, src:'https://picsum.photos/seed/weelife7/1200/800', title:'Berburu Harta Karun', tag:'event', desc:'Aksi seru berburu harta karun.'},
-      {id:8, src:'https://picsum.photos/seed/weelife8/1200/800', title:'Embun Pagi', tag:'art', desc:'Karya foto embun'},
-      {id:9, src:'https://picsum.photos/seed/weelife9/1200/1600', title:'Potret Remaja', tag:'meet', desc:'Pose candid member'}
+      {id:1, src:'https://github.com/marcellnw/LA-Community/blob/main/Gambar/IMG_20250802225435742.jpg', title:'Menjelajahi Kota', tag:'event', desc:'Petualangan di kota virtual Weelife.'},
+      {id:2, src:'https://github.com/marcellnw/LA-Community/blob/main/Gambar/IMG_20250802230319854.jpg', title:'Santai di Pantai', tag:'meet', desc:'Kumpul santai komunitas di pantai.'},
+      {id:3, src:'https://github.com/marcellnw/LA-Community/blob/main/Gambar/IMG_20250802230433388.jpg', title:'Desain Rumah', tag:'art', desc:'Karya desain rumah anggota.'},
+      {id:4, src:'https://github.com/marcellnw/LA-Community/blob/main/Gambar/IMG_20250802231016099.jpg', title:'Festival Komunitas', tag:'event', desc:'Merayakan festival bersama di Weelife.'},
+      {id:5, src:'https://github.com/marcellnw/LA-Community/blob/main/Gambar/IMG_20250802231114422.jpg', title:'Malam Pesta', tag:'meet', desc:'Pesta malam bersama di klub.'},
+      {id:6, src:'https://github.com/marcellnw/LA-Community/blob/main/Gambar/IMG_20250802231216146.jpg', title:'Taman Bunga', tag:'art', desc:'Hasil foto taman bunga virtual.'},
+      {id:7, src:'https://github.com/marcellnw/LA-Community/blob/main/Gambar/IMG_20250804154127509.jpg', title:'Berburu Harta Karun', tag:'event', desc:'Aksi seru berburu harta karun.'},
+      {id:8, src:'https://github.com/marcellnw/LA-Community/blob/main/Gambar/IMG_20250806005949448.jpg', title:'Embun Pagi', tag:'art', desc:'Karya foto embun'},
+      {id:9, src:'https://github.com/marcellnw/LA-Community/blob/main/Gambar/IMG_20250806023733321.jpg', title:'Potret Remaja', tag:'meet', desc:'Pose candid member'}
     ];
     
     // Monthly story images
     let storyImages = [
-      {id:10, src:'https://picsum.photos/seed/weelife10/1200/800', title:'Acara Festival Komunitas', tag:'event', desc:'Momen berharga saat festival komunitas berlangsung.'},
-      {id:11, src:'https://picsum.photos/seed/weelife11/1200/800', title:'Kumpul Santai di Kafe', tag:'meet', desc:'Ngobrol seru sambil ngopi bersama teman-teman.'},
-      {id:12, src:'https://picsum.photos/seed/weelife12/1200/800', title:'Desain Rumah Futuristik', tag:'art', desc:'Salah satu karya desain rumah terbaik dari member.'},
-      {id:13, src:'https://picsum.photos/seed/weelife13/1200/800', title:'Lomba Fashion Show', tag:'event', desc:'Para avatar menampilkan gaya terbaik mereka.'},
-      {id:14, src:'https://picsum.photos/seed/weelife14/1200/800', title:'Foto Bareng di Taman', tag:'meet', desc:'Kenangan indah saat berfoto di taman Weelife.'},
+      {id:10, src:'https://github.com/marcellnw/LA-Community/blob/main/Gambar/IMG_20250806023828314.jpg', title:'Acara Festival Komunitas', tag:'event', desc:'Momen berharga saat festival komunitas berlangsung.'},
+      {id:11, src:'https://github.com/marcellnw/LA-Community/blob/main/Gambar/IMG_20250807033906100.jpg', title:'Kumpul Santai di Kafe', tag:'meet', desc:'Ngobrol seru sambil ngopi bersama teman-teman.'},
+      {id:12, src:'https://github.com/marcellnw/LA-Community/blob/main/Gambar/IMG_20250807033757940.jpg', title:'Desain Rumah Futuristik', tag:'art', desc:'Salah satu karya desain rumah terbaik dari member.'},
+      {id:13, src:'https://github.com/marcellnw/LA-Community/blob/main/Gambar/IMG_20250809193906648.jpg', title:'Lomba Fashion Show', tag:'event', desc:'Para avatar menampilkan gaya terbaik mereka.'},
+      {id:14, src:'https://github.com/marcellnw/LA-Community/blob/main/Gambar/IMG_20250809193906648.jpg', title:'Foto Bareng di Taman', tag:'meet', desc:'Kenangan indah saat berfoto di taman Weelife.'},
     ];
 
     let currentList = images.slice();
