--- a/index.html
+++ b/index.html
@@ -412,9 +412,9 @@
     
     // Monthly story images
     let storyImages = [
-      {id:11, src:'https://github.com/marcellnw/LA-Community/blob/main/Gambar/IMG_20250806023828314.jpg?raw=true', title:'Acara Festival Komunitas', tag:'event', desc:'Momen berharga saat festival komunitas berlangsung.'},
-      {id:12, src:'https://github.com/marcellnw/LA-Community/blob/main/Gambar/IMG_20250807033906100.jpg?raw=true', title:'Kumpul Santai di Kafe', tag:'meet', desc:'Ngobrol seru sambil ngopi bersama teman-teman.'},
-      {id:13, src:'https://github.com/marcellnw/LA-Community/blob/main/Gambar/IMG_20250807033757940.jpg?raw=true', title:'Desain Rumah Futuristik', tag:'art', desc:'Salah satu karya desain rumah terbaik dari member.'},
+      {id:11, src:'https://github.com/marcellnw/LA-Community/blob/main/Gambar/IMG_20250806023828314.jpg?raw=true', title:'Acara Festival Komunitas', tag:'event', desc:'Foto bersama dedy zhee, nathania dan marcellnw di puncak.'},
+      {id:12, src:'https://github.com/marcellnw/LA-Community/blob/main/Gambar/IMG_20250807033906100.jpg?raw=true', title:'Acara ulang tahun', tag:'fotbar', desc:'Merayakan pesta ulang tahun.'},
+      {id:13, src:'https://github.com/marcellnw/LA-Community/blob/main/Gambar/IMG_20250807033757940.jpg?raw=true', title:'Acara ulang tahun ', tag:'art', desc:'Pesta ulang tahun sahabat weelife.'},
     ];
 
     let currentList = images.slice();
