--- a/index.html
+++ b/index.html
@@ -399,15 +399,15 @@
 
     // initial demo images (weelife placeholders)
     let images = [
-      {id:1, src:'https://github.com/marcellnw/LA-Community/blob/main/Gambar/IMG_20250802225435742.jpg?raw=true', title:'Menjelajahi Kota', tag:'event', desc:'Petualangan di kota virtual Weelife.'},
-      {id:2, src:'https://github.com/marcellnw/LA-Community/blob/main/Gambar/IMG_20250802230319854.jpg?raw=true', title:'Santai di Pantai', tag:'meet', desc:'Kumpul santai komunitas di pantai.'},
-      {id:3, src:'https://github.com/marcellnw/LA-Community/blob/main/Gambar/IMG_20250802230433388.jpg?raw=true', title:'Desain Rumah', tag:'art', desc:'Karya desain rumah anggota.'},
-      {id:4, src:'https://github.com/marcellnw/LA-Community/blob/main/Gambar/IMG_20250802231016099.jpg?raw=true', title:'Festival Komunitas', tag:'event', desc:'Merayakan festival bersama di Weelife.'},
-      {id:5, src:'https://github.com/marcellnw/LA-Community/blob/main/Gambar/IMG_20250802231114422.jpg?raw=true', title:'Malam Pesta', tag:'meet', desc:'Pesta malam bersama di klub.'},
-      {id:6, src:'https://github.com/marcellnw/LA-Community/blob/main/Gambar/IMG_20250802231216146.jpg?raw=true', title:'Taman Bunga', tag:'art', desc:'Hasil foto taman bunga virtual.'},
-      {id:7, src:'https://github.com/marcellnw/LA-Community/blob/main/Gambar/IMG_20250804154127509.jpg?raw=true', title:'Berburu Harta Karun', tag:'event', desc:'Aksi seru berburu harta karun.'},
-      {id:8, src:'https://github.com/marcellnw/LA-Community/blob/main/Gambar/IMG_20250806005949448.jpg?raw=true', title:'Embun Pagi', tag:'art', desc:'Karya foto embun'},
-      {id:9, src:'https://github.com/marcellnw/LA-Community/blob/main/Gambar/IMG_20250806023733321.jpg?raw=true', title:'Potret Remaja', tag:'meet', desc:'Pose candid member'},
+      {id:1, src:'https://github.com/marcellnw/LA-Community/blob/main/Gambar/IMG_20250802225435742.jpg?raw=true', title:'La community', tag:'Gambar', desc:'Weelife, kebersamaan circle la.'},
+      {id:2, src:'https://github.com/marcellnw/LA-Community/blob/main/Gambar/IMG_20250802230319854.jpg?raw=true', title:'La community', tag:'Gambar', desc:'Weelife, kebersamaan circle la.'},
+      {id:3, src:'https://github.com/marcellnw/LA-Community/blob/main/Gambar/IMG_20250802230433388.jpg?raw=true', title:'La community', tag:'Gambar', desc:'Weelife, kebersamaan circle la.'},
+      {id:4, src:'https://github.com/marcellnw/LA-Community/blob/main/Gambar/IMG_20250802231016099.jpg?raw=true', title:'La community', tag:'Gambar', desc:'Weelife, kebersamaan circle la.'},
+      {id:5, src:'https://github.com/marcellnw/LA-Community/blob/main/Gambar/IMG_20250802231114422.jpg?raw=true', title:'La community', tag:'Gambar', desc:'Weelife, kebersamaan circle la.'},
+      {id:6, src:'https://github.com/marcellnw/LA-Community/blob/main/Gambar/IMG_20250802231216146.jpg?raw=true', title:'La community', tag:'Gambar', desc:'Weelife, kebersamaan circle la.'},
+      {id:7, src:'https://github.com/marcellnw/LA-Community/blob/main/Gambar/IMG_20250804154127509.jpg?raw=true', title:'La community', tag:'Gambar', desc:'Weelife, kebersamaan circle la.'},
+      {id:8, src:'https://github.com/marcellnw/LA-Community/blob/main/Gambar/IMG_20250806005949448.jpg?raw=true', title:'La community', tag:'Gambar', desc:'Weelife, kebersamaan circle la'},
+      {id:9, src:'https://github.com/marcellnw/LA-Community/blob/main/Gambar/IMG_20250806023733321.jpg?raw=true', title:'La community', tag:'Gambar', desc:'Weelife, kebersamaan circle la'},
     ];
     
     // Monthly story images
