--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
     
     // Monthly story images
     let storyImages = [
-      {id:11, src:'https://github.com/marcellnw/LA-Community/blob/main/Gambar/IMG_20250806023828314.jpg?raw=true', title:'Acara Festival Komunitas', tag:'event', desc:'Foto bersama dedy zhee, nathania dan marcellnw di puncak.'},
+      {id:11, src:'https://github.com/marcellnw/LA-Community/blob/main/Gambar/IMG_20250806023828314.jpg?raw=true', title:'Trio muncak', tag:'event', desc:'Foto bersama dedy zhee, nathania dan marcellnw di puncak.'},
       {id:12, src:'https://github.com/marcellnw/LA-Community/blob/main/Gambar/IMG_20250807033906100.jpg?raw=true', title:'Acara ulang tahun', tag:'fotbar', desc:'Merayakan pesta ulang tahun.'},
       {id:13, src:'https://github.com/marcellnw/LA-Community/blob/main/Gambar/IMG_20250807033757940.jpg?raw=true', title:'Acara ulang tahun ', tag:'art', desc:'Pesta ulang tahun sahabat weelife.'},
     ];
