--- a/index.html
+++ b/index.html
@@ -299,9 +299,9 @@
     
     <div class="controls" role="toolbar" aria-label="Filter galeri">
       <button class="filter-btn active" data-filter="all">Semua</button>
-      <button class="filter-btn" data-filter="event">Event</button>
-      <button class="filter-btn" data-filter="meet">Pertemuan</button>
-      <button class="filter-btn" data-filter="art">Karya</button>
+      <button class="filter-btn" data-filter="Gambar">Event</button>
+      <button class="filter-btn" data-filter="Gambar">Pertemuan</button>
+      <button class="filter-btn" data-filter="Gambar">Karya</button>
 
       <div style="flex:1"></div>
     </div>
