--- a/join.html
+++ b/join.html
@@ -253,7 +253,7 @@
       <h3>1. Kirim Permintaan Pertemanan di Weelife</h3>
       <p>Langkah pertama adalah menambahkan founder kami sebagai teman di dalam game Weelife. Cari nama-nama berikut dan kirimkan permintaan pertemanan Anda:</p>
       <ul>
-        <li>**Founder:** `Marcellnw`</li>
+        <li>**Founder:** `Zhee`</li>
         <li>**Co-Founder:** `Nathania`</li>
       </ul>
       
